Add Time in Haven, update fonts

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Overlock&family=Pirata+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Overlock&family=Pirata+One&family=MedievalSharp&family=Yatra+One&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{{ site.base-url }}/css/pphost.css" />
 
