--- a/docs/css/pphost.css
+++ b/docs/css/pphost.css
@@ -45,7 +45,7 @@ h1 {
 
 h2 {
   color: red;
-  font-family: 'Pirata One', cursive;
+  font-family: 'Yarta One', cursive;
   font-size: 24pt;
   font-weight: bold;
   margin-bottom: 1px;
@@ -54,7 +54,7 @@ h2 {
 h3 {
   background-color: white;
   color: red;
-  font-family: 'Pirata One', cursive;
+  font-family: 'MedievalSharp', cursive;
   font-size: 16pt;
   font-weight: bold;
   margin: 2px;
