Laws of Haven, minor corrections

--- a/docs/css/pphost.css
+++ b/docs/css/pphost.css
@@ -45,7 +45,7 @@ h1 {
 
 h2 {
   color: red;
-  font-family: 'Yarta One', cursive;
+  font-family: 'Yatra One', cursive;
   font-size: 24pt;
   font-weight: bold;
   margin-bottom: 1px;
