--- a/docs/css/pphost.css
+++ b/docs/css/pphost.css
@@ -54,7 +54,7 @@ h2 {
 h3 {
   background-color: white;
   color: red;
-  font-family: 'MedievalSharp', cursive;
+  font-family: 'Yatra One', cursive;
   font-size: 16pt;
   font-weight: bold;
   margin: 2px;
