--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,7 @@
 
   <meta itemprop="name" content="Worlds of Pphost/Haven/{{ page.title }}" />
   <meta itemprop="description" content="Worlds of Pphost is a D&amp;D 5e play-by-post campaign setting hosted on D&amp;D Beyond." />
-  <meta itemprop="image" content="http://vesselonline.org/cgi-bin/img/pphost/ampersand_transparent-black.png" />
+  <meta itemprop="image" content="https://images.weserv.nl/?url=http://vesselonline.org/cgi-bin/img/pphost/ampersand_transparent-black.png" />
 
   <link rel="icon" href="https://dnd.wizards.com/sites/all/themes/dx/icons/favicon_.ico" type="image/x-icon" />
 
@@ -27,15 +27,19 @@
   <header role="banner">
     <table style="width:100%;"><tr>
       <td style="background-color:red;">
-        <img src="http://vesselonline.org/cgi-bin/img/pphost/ampersand_transparent-black.png" alt="D&amp;D logo" style="float:left;height:128px;padding:4px 12px;"/>
-        <h1>The Worlds of Pphost</h1>
+        <img src="https://images.weserv.nl/?url=http://vesselonline.org/cgi-bin/img/pphost/ampersand_transparent-black.png" alt="D&amp;D logo" style="float:left;height:128px;padding:4px 12px;"/>
+        <!--<h1>The Worlds of Pphost</h1>-->
+        <h1>Kingston Area Gamers</h1>
         <h3>Haven Lore</h3></td>
       <td style="background-color:white; text-align:right;"><h3 style="margin-top:3px;">Information</h3><nav><p>
-        <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/109470-the-worlds-of-pphost" target="_blank">The Worlds of Pphost</a><br />
-        Haven <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/110004-worlds-of-pphost-haven" target="_blank">Lore</a> &amp;
+        <a href="https://www.worldanvil.com/w/haven---kag-edition-agbadza79" target="_blank">Haven - KAG Edition</a><br />
+        <a href="https://www.worldanvil.com/w/haven---kag-edition-agbadza79/a/pennies-for-poison-plot" target="_blank">Pennies for Poison</a><br />
+        <!--<a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/109470-the-worlds-of-pphost" target="_blank">The Worlds of Pphost</a><br />-->
+        Haven's <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/110004-worlds-of-pphost-haven" target="_blank">Original Lore</a><br /><!-- &amp;
           <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/116929-worlds-of-pphost-haven-between-adventures" target="_blank">Role-Play</a><br />
         <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/109470-the-worlds-of-pphost?comment=4" target="_blank">Character Profile Guidelines</a><br />
-        <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/109470-the-worlds-of-pphost?comment=6" target="_blank">DM Profile Guidelines</a>
+        <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/109470-the-worlds-of-pphost?comment=6" target="_blank">DM Profile Guidelines</a>-->
+        Haven's <a href="http://vesselonline.org/cgi-bin/pphost_bb.cgi" target="_blank">Bulletin Board</a>
         <!--br />&nbsp;<br /-->
       </p></nav></td>
     </tr></table>
