--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -34,12 +34,12 @@
       <td style="background-color:white; text-align:right;"><h3 style="margin-top:3px;">Information</h3><nav><p>
         <a href="https://www.worldanvil.com/w/haven---kag-edition-agbadza79" target="_blank">Haven - KAG Edition</a><br />
         <a href="https://www.worldanvil.com/w/haven---kag-edition-agbadza79/a/pennies-for-poison-plot" target="_blank">Pennies for Poison</a><br />
+        Haven's <a href="http://vesselonline.org/cgi-bin/pphost_bb.cgi" target="_blank">Bulletin Board</a><br />
         <!--<a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/109470-the-worlds-of-pphost" target="_blank">The Worlds of Pphost</a><br />-->
         Haven's <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/110004-worlds-of-pphost-haven" target="_blank">Original Lore</a><br /><!-- &amp;
           <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/116929-worlds-of-pphost-haven-between-adventures" target="_blank">Role-Play</a><br />
         <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/109470-the-worlds-of-pphost?comment=4" target="_blank">Character Profile Guidelines</a><br />
         <a href="https://www.dndbeyond.com/forums/d-d-beyond-general/play-by-post/109470-the-worlds-of-pphost?comment=6" target="_blank">DM Profile Guidelines</a>-->
-        Haven's <a href="http://vesselonline.org/cgi-bin/pphost_bb.cgi" target="_blank">Bulletin Board</a>
         <!--br />&nbsp;<br /-->
       </p></nav></td>
     </tr></table>
